--- a/css/guest.css
+++ b/css/guest.css
@@ -31,6 +31,10 @@ html {
     font-family: 'Noto Naskh Arabic', serif !important;
 }
 
+* {
+ font-family: 'Lora', sans-serif;
+}
+
 .img-center-crop {
     width: 13rem;
     height: 13rem;
